--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | HighMixed</title>
     <meta name="description" content="">
@@ -10,7 +11,7 @@
   </head>
   <body>
     <div id="unity-container">
-      <div id="unity-canvas-container">
+      <div id="unity-canvas-container" style="width: 100%; height: 100%;">
         <canvas id="unity-canvas" style="width: 100%; height: 100%;"></canvas>
       </div>
       <div id="unity-loading-bar">
@@ -29,11 +30,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/BUILD 1.loader.js";
+      var loaderUrl = buildUrl + "/build2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/BUILD 1.data",
-        frameworkUrl: buildUrl + "/BUILD 1.framework.js",
-        codeUrl: buildUrl + "/BUILD 1.wasm",
+        dataUrl: buildUrl + "/build2.data",
+        frameworkUrl: buildUrl + "/build2.framework.js",
+        codeUrl: buildUrl + "/build2.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "YSherbo",
         productName: "HighMixed",
@@ -49,9 +50,7 @@
       var unityInstance = null;
       
 
-      canvasContainer.style.width = "960px";
-      canvasContainer.style.height = "600px";
-      canvas.style.background = "url('" + buildUrl + "/BUILD 1.jpg') center / cover";
+      canvas.style.background = "url('" + buildUrl + "/build2.jpg') center / cover";
       loadingBar.style.display = "block";
 
       var script = document.createElement("script");
