--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/build3.loader.js";
+      var loaderUrl = buildUrl + "/Build4.loader.js";
       var config = {
-        dataUrl: buildUrl + "/build3.data",
-        frameworkUrl: buildUrl + "/build3.framework.js",
-        codeUrl: buildUrl + "/build3.wasm",
+        dataUrl: buildUrl + "/Build4.data",
+        frameworkUrl: buildUrl + "/Build4.framework.js",
+        codeUrl: buildUrl + "/Build4.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "YSherbo",
         productName: "HighMixed",
