--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Build7.loader.js";
+      var loaderUrl = buildUrl + "/Builld9.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Build7.data",
-        frameworkUrl: buildUrl + "/Build7.framework.js",
-        codeUrl: buildUrl + "/Build7.wasm",
+        dataUrl: buildUrl + "/Builld9.data",
+        frameworkUrl: buildUrl + "/Builld9.framework.js",
+        codeUrl: buildUrl + "/Builld9.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "YSherbo",
         productName: "HighMixed",
-        productVersion: "1.0",
+        productVersion: "1",
       };
 
       var container = document.querySelector("#unity-container");
